Separating lines implemented Adapted the separating triangle code so that separating lines can be computed as well (and are currently used for the DCREntity). The way in which the environment is currently processed (resulting in a tree structure and without degree-3 separating triangles) this will allow for more efficient placement of guards.